# open-gh-copilot

./: Cargo.toml  README.md
src/: main.rs
src/chains/: explain.rs  git_commit.rs  mod.rs  recommend.rs  revise_command.rs
src/cli/: mod.rs
src/commands/: explain_command.rs  git_commit_command.rs  mod.rs  suggest_command.rs
src/util/: config.rs  llm.rs  mod.rs  shared.rs
