[package]
name = "gh_copilot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
langchain-rust = "3.2.3"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = "1.37.0"
clipboard = "0.5"
dialoguer = "0.9"
clap = "3.0"
regex = "1.10.4"
async-recursion = "1.1.0"
home = "0.5.9"
toml = "0.8.12"
async-trait = "0.1.79"
futures = "0.3.30"
